在列表处增加链接

--- a/admin/view/default/adminuser/userlist.html
+++ b/admin/view/default/adminuser/userlist.html
@@ -2,7 +2,7 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 <div class="padd2 mar_top">
-<div class="topimg">共计 {{$sum}} 条记录</div>
+<div class="topimg">共计 {{$sum}} 条记录&nbsp;[<a href="?c=adminuser&a=add" target='main'>增加管理员</a>]</div>
 </div>
 <div align="center">
   <div class="tb_wid">
