--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -88,8 +88,8 @@ function changeNode()
 <form name='nodeform'
 	action="?c=vhostproduct&a={{$action}}&id={{$vhostproduct.id}}"
 	method="post">
-<div class="head_block tb_wid">&nbsp;{{if $action=='editProduct'}}修改产品{{else}}增加产品{{/if}}</div>
-<div class="block tb_wid">
+<div class="head_block tb_wid2">&nbsp;{{if $action=='editProduct'}}修改产品{{else}}增加产品{{/if}}</div>
+<div class="block tb_wid2">
 <table id="table_2" cellpadding="0" cellspacing="1">
 	<tr>
 		<td class="td_bgc right_2">产品名称：</td>
