--- a/admin/view/default/nodes/listnode.html
+++ b/admin/view/default/nodes/listnode.html
@@ -69,7 +69,7 @@ function checkAllNode()
 </div>
   <div id="main" class="wid">
   <table width="100%" align="center" cellspacing="3">
-<tr><td>[<a href='?c=nodes&a=flush'>更新配置文件</a>][<a href='javascript:checkAllNode()'>查询所有主机状态</a>]</td></tr>
+<tr><td>[<a href='?c=nodes&a=flush'>更新配置文件</a>][<a href='javascript:checkAllNode()'>查询所有主机状态</a>][<a href="?c=nodes&a=addNode" target='main'>增加主机</a>]</td></tr>
     </table>
     <table width="90%" align="center" cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
