--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -70,7 +70,7 @@ function SwitchMenu(obj,sty)
 		<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
 	</ul>
 	<h1 id="m6" onClick="SwitchMenu('sub7','m7')" class="menu">
-	<ol id="p7">系统设置</ol>
+	<ol id="p7">支付帐号设置</ol>
 	</h1>
 	<ul class="submenu" id="sub6" >
 		<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付设置</a></li>
