--- a/user/view/default/question/pagelist.html
+++ b/user/view/default/question/pagelist.html
@@ -3,7 +3,9 @@
 <div id="container">
 	<div align="center">
 		<div class="mar_top tb_wid2" align="right">
+		<a href="?c=question&a=addFrom" target="{{$target}}">在线提问</a>
 			{{if $page>1}}
+			
 			<a href='?c=question&a=pageByuser&page=0'>首页</a> 
 			<a href='?c=question&a=pageByuser&page={{$page-1}}'>上一页</a> 
 			{{else}}
