--- a/user/view/default/question/list.html
+++ b/user/view/default/question/list.html
@@ -1,19 +1,18 @@
 {{include file='common/head.html'}}
 <div align="center">
   <form  name='reg' action="?c=question&a=get" method='post'>
-<div class="head_block tb_wid">&nbsp;在线提问</div>
-<div class="block tb_wid">
- <table id="table_2" cellpadding="0" cellspacing="1">
+<div class="head_block tb_wid2">&nbsp;在线提问</div>
+<div class="block tb_wid2">
+ 	<table id="table_2" cellpadding="0" cellspacing="1">
  	  <tr>
-        <td class="td_bgc right_2">标题:</td> 
-        <td class="td_bgc right_2">{{$log.title}}</td>
+        <td class="td_bgc right_2" width="50">标题:</td> 
+        <td class="td_bgc right_2" align="center">{{$log.title}}</td>
        	</tr>
        <tr>
         <td class="td_bgc right_2">内容:</td>
-        <td class="td_bgc right_2" >{{$log.body}}</td>
+        <td class="td_bgc right_2" align="center">{{$log.body}}</td>
      	</tr>
-   
     </table>
-	</div>
+</div>
 	</form>
 </div>
