--- a/user/view/default/question/list.html
+++ b/user/view/default/question/list.html
@@ -1,7 +1,7 @@
 {{include file='common/head.html'}}
 <div align="center">
-<div class="head_block tb_wid">&nbsp;在线提问</div>
-<div class="block tb_wid">
+<div class="head_block tb_wid2">&nbsp;在线提问</div>
+<div class="block tb_wid2">
  <table id="table_2" cellpadding="0" cellspacing="1">
  	  <tr>
         <td class="td_bgc right_2">提问标题:</td> 
