--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -81,6 +81,7 @@ function SwitchMenu(obj,sty)
 	<ul class="submenu" id="sub8" >
 		<li><a href='?c=moneyin&a=pageMoneyin' target='main'>充值列表</a></li>
 		<li><a href='?c=moneyin&a=pageMoneyout' target='main'>消费列表</a></li>
+		<li><a href='?c=question&a=pageQuestion' target='main'>用户提问</a></li>
 </div>
 </td></tr>
 </table>
