--- a/user/view/default/question/list.html
+++ b/user/view/default/question/list.html
@@ -10,10 +10,17 @@
        <tr>
         <td class="td_bgc right_2">提问内容:</td>
         <td class="td_bgc right_2" >{{$log.body}}</td>
-     	</tr>  <tr>
+     	</tr>
+      <tr>
         <td class="td_bgc right_2">管理员回复:</td>
         <td class="td_bgc right_2" >{{$log.reply}}</td>
      	</tr>
+     	{{if $log.reply_time!=""}}
+     	 <tr>
+        <td class="td_bgc right_2">回复时间:</td>
+        <td class="td_bgc right_2" >{{$log.reply_time}}</td>
+     	</tr>
+     	{{/if}}
     </table>
 </div>
 	</form>
