--- a/user/view/default/question/pagelist.html
+++ b/user/view/default/question/pagelist.html
@@ -6,7 +6,7 @@
 		<table id="table_2" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="left">
-				[<a href="?c=question&a=addFrom" target="{{$target}}">在线提问</a>]
+				[<a href="?c=question&a=addFrom" target="{{$target}}"><font color="red"">在线提问</font></a>]
 				</td>
 				<td align="right">
 				{{if $page>1}}
