--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -41,13 +41,8 @@ function SwitchMenu(obj,sty)
 		<li><a href="?c=index&a=main" target='main'>{{$lang.myinfo}}</a></li>	
 		<li><a href="?c=session&a=changePasswordForm" target='main'>{{$lang.change_passwd}}</a></li>
 		<li><a href="?c=session&a=logout" target='_top'>退出登录</a></li>
+		<li><a href="?c=adminuser&a=listUser" target='main'>管理员</a></li>	
 	</ul>
-<h1 id="m3" onClick="SwitchMenu('sub3','m3')" class="menu"><ol id="p3">管理员管理</ol></h1>
-	<ul class="submenu" id="sub3" >
-		<li><a href="?c=adminuser&a=listUser" target='main'>管理员列表</a></li>	
-		<li><a href="?c=adminuser&a=add" target='main'>增加管理员</a></li>
-		
-		</ul>
 	<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu"><ol id="p4">主机管理</ol></h1>
 	<ul class="submenu" id="sub4" >
 		<li><a href="?c=nodes&a=listNode" target='main'>主机列表</a></li>	
