--- a/user/view/default/question/list.html
+++ b/user/view/default/question/list.html
@@ -10,11 +10,12 @@
        <tr>
         <td class="td_bgc right_2">提问内容:</td>
         <td class="td_bgc right_2" >{{$log.body}}</td>
-     	</tr>  <tr>
+     	</tr>  
+		<tr>
         <td class="td_bgc right_2">管理员回复:</td>
         <td class="td_bgc right_2" >{{$log.reply}}</td>
      	</tr>
     </table>
 </div>
-	</form>
 </div>
+{{include file='common/foot.html'}}
