修改在线充值

--- a/user/view/default/money/add.html
+++ b/user/view/default/money/add.html
@@ -1,3 +1,4 @@
+<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0' onLoad="javascript:reg.money.focus();">
 <div align="center">
   <form  name='reg' action="?c=money&a=add&gw=1" method='post' target='_blank'>
 <div class="head_block tb_wid">&nbsp;在线充值</div>
@@ -15,16 +16,13 @@
 	  <tr>
         <td class="td_bgc right_2">金额(元):</td>
         <td class="td_bgc right_2">
-        <input name='money' type='text' id="tb_wid3"  value="" size="4"/>
+        <input name='money' type='text' id="tb_wid3"  value="" size="4"/>&nbsp;<input type="submit" value="确认" />
        </td>
       </tr>
-	    <tr>
-	    <td class="td_bgc td_hg" colspan="2" align="center">
-		 <input type="submit" value="确认" />
-		</td>
-      </tr>
+
     </table>
 	</div>
 	</form>
 </div>
+</body>
 
