--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -1,4 +1,5 @@
 <div align="center">
+<div>
 <div class="head_block tb_wid">&nbsp;帐户信息</div>
 <div class="block tb_wid">
 <table id="table_2" cellpadding="0" cellspacing="1">
@@ -23,5 +24,5 @@
         <td class="td_bgc right_2"> {{$user.money/100}}</td>
         </tr>
     </table>
-	</div>
-	</div>
+</div>
+</div>
