--- a/user/view/default/vhostproduct/listVhost.html
+++ b/user/view/default/vhostproduct/listVhost.html
@@ -1,9 +1,9 @@
 {{include file='common/head.html'}}
-<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
+<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0' onLoad="javascript:form1.name.focus();">
 <div id="container">
 	<div align="center">
 	<table width='70%' align='center'>
-	<form action='?c=vhostproduct&a=pageVhostByuser' method='post'>
+	<form name='form1' action='?c=vhostproduct&a=pageVhostByuser' method='post'>
 	<tr><td>
 	用户名或域名:<input type='text' name='name' value='{{$name}}'><input type='submit' value='搜索'>
 	</td><td align='right'><div class="mar_top tb_wid4" align="right">
