--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -23,5 +23,14 @@
         <td class="td_bgc right_2"> {{$user.money/100}}</td>
         </tr>
     </table>
+    </div>
+    
+    <div class="head_block tb_wid">&nbsp;公告栏</div>
+   <div class="block tb_wid">
+		<table id="table" border="0" cellpadding="0" cellspacing="1">
+				{{foreach from=$news item=row}}								
+				<tr><td><a href='?c=user&a=get&id={{$row.id}}'>{{$row.title}}</a></td><td>{{$row.add_time}}</td></tr>
+			{{/foreach}}		
+		</table>
 	</div>
-	</div>
+</div>
