--- a/admin/view/default/news/add.html
+++ b/admin/view/default/news/add.html
@@ -1,6 +1,6 @@
 {{include file='common/head.html'}}
 <div align="center">
-  <form  name='reg' action="?c=news&a=add" method='post'>
+  <form  name='reg' action="?c=news&a=addNews" method='post'>
 <div class="head_block tb_wid">&nbsp;最新公告:</div>
 <div class="block tb_wid">
  <table id="table_2" cellpadding="0" cellspacing="1">
