--- a/admin/view/default/news/pagelist.html
+++ b/admin/view/default/news/pagelist.html
@@ -35,10 +35,10 @@
 					</tr>
 					{{foreach from=$list item=row}}
 				<tr>
-					<td class="right_2">[<a href='?c=news&a=get&id={{$row.id}}'>更新</a>][<a href='javascript:if(confirm("确定要删除吗?"))
-					{ window.location="?c=news&a=del&id={{$row.id}}";}'>删除</a>]</td>
+					<td class="right_2">[<a href='?c=news&a=getNews&id={{$row.id}}'>更新</a>][<a href='javascript:if(confirm("确定要删除吗?"))
+					{ window.location="?c=news&a=delNews&id={{$row.id}}";}'>删除</a>]</td>
 					<td class="right_2">{{$row.id}}</td>
-					<td class="right_2"><a href='?c=news&a=get&id={{$row.id}}'>{{$row.title}}</a></td>
+					<td class="right_2"><a href='?c=news&a=getNews&id={{$row.id}}'>{{$row.title}}</a></td>
 					<td class="right_2">{{$row.add_time}}</td>
 					
 					</tr>
