--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -27,7 +27,7 @@
     
     <div class="head_block tb_wid">&nbsp;最新公告</div>
    <div class="block tb_wid">
-		<table id="table" border="0" cellpadding="0" cellspacing="1">
+		<table id="table_2" border="0" cellpadding="0" cellspacing="1">
 			{{foreach from=$news item=row}}								
 				<tr><td class="td_bgc right_2"><a href='?c=user&a=get&id={{$row.id}}'>{{$row.title}}</a></td>
 				<td class="td_bgc right_2">{{$row.add_time}}
