--- a/admin/view/default/news/pagelist.html
+++ b/admin/view/default/news/pagelist.html
@@ -5,7 +5,7 @@
 		<div class="mar_top tb_wid2" align="right">
 		<table cellpadding="0" cellspacing="0" id="table_2">
 		  <tr><td align="left">
-				<a href="?c=news&a=addFrom" target="{{$target}}" ><b>增加公告</b></a>
+				[<a href="?c=news&a=addFrom" target="{{$target}}" ><span class="font_1">增加公告</span></a>]
 			</td>
 		  	<td align="right">
 				{{if $page>1}}
