--- a/user/view/default/public/news.html
+++ b/user/view/default/public/news.html
@@ -1,6 +1,6 @@
 {{include file='common/head.html'}}
 <div align="center">
-<div class="head_block tb_wid">&nbsp;公告内容</div>
+<div class="head_block tb_wid">&nbsp;{{$new.title}}</div>
 <div class="block tb_wid">
  <table id="table_2" cellpadding="0" cellspacing="1">
      <tr>
