--- a/admin/view/default/news/list.html
+++ b/admin/view/default/news/list.html
@@ -6,14 +6,12 @@
  <table id="table_2" cellpadding="0" cellspacing="1">
  	  <tr>
         <td class="td_bgc right_2">标题:</td> 
-        <td class="td_bgc right_2">
-		<input name='title' type="text" value="{{$new.title}}" size="45" />
+        <td class="td_bgc right_2">{{$new.title}}
         </td>
        </tr>
        <tr>
         <td class="td_bgc right_2" valign="top">公告内容:</td>
-        <td class="td_bgc right_2" >
-        <textarea name='body'  rows='20' cols='60'>{{$new.body}}</textarea></td>
+        <td class="td_bgc right_2" >{{$new.body}}</td>
      <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
 		<input type="submit" value="提交"></td>
