--- a/admin/view/default/news/pagelist.html
+++ b/admin/view/default/news/pagelist.html
@@ -2,7 +2,7 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 	<div align="center">
-		<div class="mar_top tb_wid2" align="right">
+		<div class="mar_top tb_wid5" align="right">
 		<table cellpadding="0" cellspacing="0" id="table_2">
 		  <tr><td align="left">
 				[<a href="?c=news&a=addFrom" target="{{$target}}" ><span class="font_1">增加公告</span></a>]
@@ -24,21 +24,20 @@
 		  </td></tr>
 		</table>
 		</div>
-		<div class="block tb_wid2">
+		<div class="block tb_wid5">
 			<table id="table" border="0" cellpadding="0" cellspacing="1">
 				<tr id="ttitle">
 					<td class="right_2">操作</td>		
 					<td class="right_2">序号</td>
 					<td class="right_2">标题</td>
 					<td class="right_2">更新时间</td>
-						
 					</tr>
 					{{foreach from=$list item=row}}
 				<tr>
 					<td class="right_2">[<a href='?c=news&a=getNews&id={{$row.id}}'>更新</a>][<a href='javascript:if(confirm("确定要删除吗?"))
 					{ window.location="?c=news&a=delNews&id={{$row.id}}";}'>删除</a>]</td>
 					<td class="right_2">{{$row.id}}</td>
-					<td class="right_2"><a href='?c=news&a=getNews&id={{$row.id}}'>{{$row.title}}</a></td>
+					<td class="right_2"><a href='/user/frame.php?c=public&a=readNews&id={{$row.id}}'>{{$row.title}}</a></td>
 					<td class="right_2">{{$row.add_time}}</td>
 					
 					</tr>
