--- a/admin/view/default/question/pagelist.html
+++ b/admin/view/default/question/pagelist.html
@@ -4,9 +4,7 @@
 	<div align="center">
 		<div class="mar_top tb_wid5" align="right">
 			<table cellpadding="0" cellspacing="0" id="table_2">
-				<tr><td align="left">
-					[<a href="?c=question&a=addFrom" target="{{$target}}"><span class="font_1">在线提问</span></a>]
-				</td><td align="right">
+				<tr><td align="right">
 					{{if $page>1}}
 					<a href='?c=question&a=pageQuestion&page=0'>首页</a> 
 					<a href='?c=question&a=pageQuestion&page={{$page-1}}'>上一页</a> 
