--- a/admin/view/default/nodes/init.html
+++ b/admin/view/default/nodes/init.html
@@ -27,7 +27,7 @@ function go_back()
 	</tr>
 	<tr>
 		<td class="td_bgc td_hg" colspan="2" align="center">
-		<input type='button' onClick='javascript:window.location="?c=nodes&a=listNode"' value='返回'/> <input
+		<input type='button' onClick='javascript:window.location="?c=nodes&a=listNode"' value='取消'/> <input
 			type="submit" value="确定"></td>
 	</tr>
 	</form>
