--- a/user/view/default/question/add.html
+++ b/user/view/default/question/add.html
@@ -8,7 +8,7 @@
  	  <tr>
         <td class="td_bgc right_2">标题:</td> 
         <td class="td_bgc right_2">
-        <input name='title' type='text' value="" size="35"/>
+        <input name='title' MaxLength="40" type='text' value="" size="35"/>
        </td>
        </tr>
        <tr>
