--- a/user/view/default/question/pagelist.html
+++ b/user/view/default/question/pagelist.html
@@ -8,16 +8,23 @@
 				<td align="left" width="132">
 					[<a href="?c=question&a=addFrom" target="{{$target}}"><span class="font_1">在线提问</span></a>]
 				</td>
+				<td><form action='?c=question&a=pageByUser' method='post'>
+					 <select name='sortname' onChange="submit()">
+					 <option value='2' {{if $sortname==2}}selected{{/if}}>全部</option>
+					 <option value='1' {{if $sortname==1}}selected{{/if}}>未回复</option>
+					 </select>
+					  </form>
+					  </td>
 				<td align="right">
 				{{if $page>1}}
-				<a href='?c=question&a=pageByuser&page=0'>首页</a> 
-				<a href='?c=question&a=pageByuser&page={{$page-1}}'>上一页</a> 
+				<a href='?c=question&a=pageByuser&sortname={{$smarty.request.sortname}}&page=0'>首页</a> 
+				<a href='?c=question&a=pageByuser&sortname={{$smarty.request.sortname}}&page={{$page-1}}'>上一页</a> 
 				{{else}}
 				首页 上一页 
 				{{/if}}
 				{{if $page!=$total_page}} 
-				<a href='?c=question&a=pageByuser&page={{$page+1}}'>下一页</a>
-				<a href='?c=question&a=pageByuser&page={{$total_page}}'>尾页</a>
+				<a href='?c=question&a=pageByuser&sortname={{$smarty.request.sortname}}&page={{$page+1}}'>下一页</a>
+				<a href='?c=question&a=pageByuser&sortname={{$smarty.request.sortname}}&page={{$total_page}}'>尾页</a>
 				{{else}}下一页 尾页
 				{{/if}} 
 				{{$page}}/{{$total_page}}&nbsp;
@@ -37,8 +44,8 @@
 					</tr>
 					{{foreach from=$list item=row}}
 				<tr>
-					<td class="right_2">[<a href='?c=question&a=get&id={{$row.id}}'>详细</a>]</td>
-					<td class="right_2">{{$row.title}}</td>
+					<td class="right_2">[<a href='?c=question&a=getQuestion&id={{$row.id}}'>详细</a>]</td>
+					<td class="right_2">{{substr($row.title,0,30)}}</td>
 					<td class="right_2">{{$row.add_time}}</td>
 					<td class="right_2">{{$row.reply_time}}</td>
 					<td class="right_2">{{if $row.status==1}}已回复{{else}} <font color=red>未回复</font>{{/if}}</td>
