--- a/admin/view/default/question/list.html
+++ b/admin/view/default/question/list.html
@@ -1,7 +1,7 @@
 {{include file='common/head.html'}}
 <div align="center">
  <form name='nodeform' action="?c=question&a=addReply&id={{$log.id}}" method="post">
-<div class="head_block tb_wid">&nbsp;在线提问</div>
+<div class="head_block tb_wid">&nbsp;提问用户:{{$log.username}}</div>
 <div class="block tb_wid">
  <table id="table_2" cellpadding="0" cellspacing="1">
  	  <tr>
@@ -14,7 +14,7 @@
      	</tr>  <tr>
         <td class="td_bgc right_2">管理员回复:</td>
         <td class="td_bgc right_2" >
-        <textarea name='reply' MaxLength="300" rows='6' cols='35'>{{$log.reply}}</textarea></td>
+        <textarea name='reply'  rows='6' cols='35'>{{$log.reply}}</textarea></td>
      	</tr>
      <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
