--- a/user/view/default/money/add.html
+++ b/user/view/default/money/add.html
@@ -1,10 +1,10 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0' onLoad="javascript:reg.money.focus();">
 <div align="center">
-  <form  name='reg' action="?c=money&a=add&gw=1" method='post' target='_blank'>
+  <form  name='reg' action="?c=money&a=add" method='post' target='_blank'>
 <div class="head_block tb_wid">&nbsp;在线充值</div>
 <div class="block tb_wid">
  <table id="table_2" cellpadding="0" cellspacing="1">
-   <!-- 
+    
       <tr>
         <td class="td_bgc right_2">支付方式:</td>
         <td class="td_bgc right_2">
@@ -12,7 +12,7 @@
         <input type="radio" name="gw" value="2" >网银在线
         </td>
       </tr>
-      -->
+      
 	  <tr>
         <td class="td_bgc right_2">金额(元):</td>
         <td class="td_bgc right_2">
