--- a/admin/view/default/user/moneyedit.html
+++ b/admin/view/default/user/moneyedit.html
@@ -1,32 +1,31 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
-<div class="topimg">当前位置：<span class="color01 right">增减余额</span></div>
-  <div id="main" class="wid">
-  <form  action="?c=user&a=editMoney&username={{$user.username}}" method='post'>
-    <table cellpadding=0 cellspacing=1>
+<div class="head_block tb_wid2">&nbsp;增减余额</div>
+  <div class="block tb_wid2">
+    <table cellpadding=0 cellspacing=1 id="table_2">
+ 	 <form  action="?c=user&a=editMoney&username={{$user.username}}" method='post'>
       <tr>
         <td width="99" bgcolor='#efefef' class='color01 right'>用户名</td>
-        <td width="168">{{$user.username}}</td>
+        <td width="168" class="td_bgc right_2">{{$user.username}}</td>
       </tr>
       <tr>
         <td class='color01 right' bgcolor='#efefef'>当前余额</td>
-        <td>{{$user.money/100}}元</td>
+        <td class="td_bgc right_2">{{$user.money/100}}元</td>
       </tr>
       <tr>
         <td class='color01 right' bgcolor='#efefef'>增减余额(元)<br></td>
-        <td><input name='money' id="money" value="0"/></td>
+        <td class="td_bgc right_2"><input name='money' id="money" value="0"/></td>
       </tr>
 	   <tr>
-        <td colspan="2" bgcolor='#efefef' class='color01 center' align="center"><button type="submit">
-          修改
-          </button></td>
+        <td colspan="2" bgcolor='#efefef' class='color01 center td_hg' align="center"><button type="submit">
+          修改</button></td>
         </tr>
+	</form>
     </table>
 	<div>
 	<!--S 协议--><!--E 协议-->
 	</div>
-	</form>
   </div>
 </div>
 </body>
