--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -13,42 +13,22 @@
         	readonly
         {{/if}}
         />
-       <font color=red>*必填.服务器别名.不可以为中文</font></td>
+       <font color=red>*必填.服务器名字.不可以为中文</font></td>
         </tr>
       <tr>
-        <td class="td_bgc right_2">主机IP：</td>
+        <td class="td_bgc right_2">easypanel主机IP：</td>
         <td class="td_bgc right_2"><input name="host" type="text" id='tb_wid3' value="{{$node.host}}">
 		      <font color=red>*必填</font></td>
         </tr>
       <tr>
-        <td class="td_bgc right_2">管理端口：</td>
+        <td class="td_bgc right_2">easypanel端口：</td>
         <td class="td_bgc right_2"><input name="port" id='tb_wid3' value="{{$node.port}}" type="text">
-			   <font color=red>*必填(默认:3311)</font></td>
-        </tr>
+			   <font color=red>*必填(默认:3312)</font></td>
+        </tr>	
 	  <tr>
-        <td class="td_bgc right_2">管理用户名：</td>
-        <td class="td_bgc right_2"><input name="user" type="text" id='tb_wid3' value="{{$node.user}}">
-				   <font color=red>*必填.默认:admin</font></td>
-        </tr>
-	  <tr>
-        <td class="td_bgc right_2">管理密码：</td>
+        <td class="td_bgc right_2">安全码：</td>
         <td class="td_bgc right_2"><input name="passwd" type="text" id='tb_wid3' value="" autoComplete='off'>
-            <font color=red>默认:kangle，仅新加和修改密码时才写.</font></td>
-        </tr>
-	  <tr>
-        <td class="td_bgc right_2">数据库管理账号：</td>
-        <td class="td_bgc right_2"><input name="db_user" type="text" id='tb_wid3' value="{{$node.db_user}}">
-            </td>
-        </tr>
-	  <tr>
-        <td class="td_bgc right_2">数据库管理密码：</td>
-        <td class="td_bgc right_2"><input name="db_passwd" type="text" id='tb_wid3' value="" autoComplete='off'>
-          <font color=red>仅新加和修改密码时才写.</font></td>
-        </tr>
-	  <tr>
-        <td class="td_bgc right_2">物理盘/挂载点：</td>
-        <td class="td_bgc right_2"><input name="dev" type="text" id='tb_wid3' value="{{$node.dev}}">
-            <font color=red>*必填(windows写c:,d:等，unix写/home等)</font></td>
+            <font color=red>仅修改时才写.</font></td>
         </tr>
 	    <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
