--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -152,6 +152,22 @@ function changeNode()
 		</select></td>
 	</tr>
 	<tr>
+		<td class="td_bgc right_2">最大连接数(0无限)</td>
+		<td class="td_bgc right_2"><input name="max_connect" type="text"
+			size='5' value="{{if $vhostproduct}}{{$vhostproduct.max_connect}}{{else}}0{{/if}}">
+		</td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">其它选项</td>
+		<td class="td_bgc right_2">
+			<input type='checkbox' name='htaccess' value='.htaccess' {{if $vhostproduct.htaccess || !$vhostproduct}}checked{{/if}}>.htaccess支持
+			<input type='checkbox' name='ftp' value='1' {{if $vhost.ftp || !$vhostproduct}}checked{{/if}}>开启ftp
+			<input type='checkbox' name='log_file' value='logs/access.log' {{if $vhostproduct.log_file || !$vhostproduct}}checked{{/if}}>日志独立
+			<input type='checkbox' name='access' value='access.xml' {{if $vhostproduct.access || !$vhostproduct}}checked{{/if}}>自定义控制
+			
+		</td>
+	</tr>
+	<tr>
 		<td class="td_bgc right_2">产品说明(支持html):</td>
 		<td class="td_bgc right_2"><textarea name='describe' rows='6' cols='40'>{{$vhostproduct.describe}}</textarea></td>
 	</tr>
