--- a/user/view/default/vhostproduct/sell.html
+++ b/user/view/default/vhostproduct/sell.html
@@ -30,16 +30,16 @@ function check_register()
 <div class="block tb_wid">
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
-        <td class="td_bgc right_2">产品名称</td>
+        <td class="td_bgc right_2">产品名称:</td>
         <td class="td_bgc right_2">{{$product.name}}</td>
         </tr>
       <tr>
-        <td class="td_bgc right_2">FTP用户名：</td>
+        <td class="td_bgc right_2">FTP用户名:</td>
         <td class="td_bgc right_2"><input name="name" type="text" id="name">
 		    <input type="button" name="Submit" value="检测用户名" onClick="check_user()"></td>
       </tr>
       <tr>
-        <td class="td_bgc right_2">密码：</td>
+        <td class="td_bgc right_2">密码:</td>
         <td class="td_bgc right_2"><input name="passwd" type="password" id="passwd"></td>
       </tr>
 	  <tr>
@@ -65,11 +65,33 @@ function check_register()
         <td class="td_bgc right_2">{{$product.db_quota}}M</td>
 	  </tr>
 	  <tr>
-        <td class="td_bgc right_2">产品说明</td>
+        <td class="td_bgc right_2">域名绑定个数:</td>
+        <td class="td_bgc right_2">{{if $product.domain==-1}}不限{{else}} {{$product.domain}}个{{/if}}</td>
+	  </tr>
+	  <tr>
+        <td class="td_bgc right_2">最大连接数:</td>
+        <td class="td_bgc right_2">{{if $product.max_connect==0}}不限{{else}}{{$product.max_connect}}{{/if}}</td>
+	  </tr>
+	  <tr>
+        <td class="td_bgc right_2">允许绑定子目录:</td>
+        <td class="td_bgc right_2">{{if $product.subdir_flag==1}}是{{else}}否{{/if}}</td>
+	  </tr>
+	  <tr>
+        <td class="td_bgc right_2">语言引擎:</td>
+        <td class="td_bgc right_2">{{$product.subtemplete}}</td>
+	  </tr>
+	  {{if $product.ftp!=1}}
+	  <tr>
+        <td class="td_bgc right_2">是否开启ftp:</td>
+        <td class="td_bgc right_2"><font color='red''>否</font></td>
+	  </tr>
+	  {{/if}}
+	  <tr>
+        <td class="td_bgc right_2">产品说明:</td>
         <td class="td_bgc right_2">{{$product.describe}}</td>
 	  </tr>
 	  <tr>
-        <td class="td_bgc right_2">价格</td>
+        <td class="td_bgc right_2">价格:</td>
         <td class="td_bgc right_2">{{$product.price/100}}元/年</td>
         </tr>
 	    <tr>
