--- a/admin/view/default/vhostproduct/listVhost.html
+++ b/admin/view/default/vhostproduct/listVhost.html
@@ -2,6 +2,17 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 	<div align="center">
+	 	<div align="center">
+		<form name="form1" method="post" action="?c=vhost&a=showVhost">
+		<div class="head_block3">
+			<p>
+  			 <span class="topimg STYLE1">输入ftp用户名或#uid或域名:</span>
+   			<input name="user" type="text" id="user" value="{{$user}}" size="25">
+   			<input type="submit" name="Submit" value="搜索">
+ 			 </p>
+ 		</div>
+   		</form>
+  	 </div>
 	<div class="mar_top tb_wid5" align="right">
 			{{if $page>1}}
 			<a href='?c=vhost&a=pageVhost&page=0'>首页</a> 
