--- a/admin/view/default/vhostproduct/listVhost.html
+++ b/admin/view/default/vhostproduct/listVhost.html
@@ -2,18 +2,17 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 	<div align="center">
-	 	<div align="center">
+	 	
+	<div class="mar_top tb_wid5" align="right">
+	<div align="left">
 		<form name="form1" method="post" action="?c=vhost&a=showVhost">
-		<div class="head_block3">
 			<p>
   			 <span class="topimg STYLE1">输入ftp用户名或#uid或域名:</span>
    			<input name="user" type="text" id="user" value="{{$user}}" size="25">
    			<input type="submit" name="Submit" value="搜索">
  			 </p>
- 		</div>
    		</form>
-  	 </div>
-	<div class="mar_top tb_wid5" align="right">
+   		</div>
 			{{if $page>1}}
 			<a href='?c=vhost&a=pageVhost&page=0'>首页</a> 
 			<a href='?c=vhost&a=pageVhost&page={{$page-1}}'>上一页</a> 
@@ -56,8 +55,8 @@
 					<td class="td_bgc right_2">{{$row.create_time}}</td>
 					<td class="td_bgc right_2">{{$row.expire_time}}</td>
 					<td class="td_bgc right_2">
-						<form action='?c={{$smarty.request.c}}&a=setStatus&name={{$row.name}}' method='post' name='status_form'>
-							<select name='status' onChange="javascript:status_form.submit()">
+						<form action='?c=vhost&a=setStatus&name={{$row.name}}' method='post' name='status_{{$row.uid}}form'>
+							<select name='status' onChange="javascript:status_{{$row.uid}}form.submit()">
 							{{for $i=0; $i<2; $i++}}
 							<option value='{{$i}}' {{if $i==$row.status}} selected {{/if}}>
 							{{if $i==0}}正常{{else}}暂停{{/if}}
