user/login.html add userreg.

--- a/user/view/default/session/login.html
+++ b/user/view/default/session/login.html
@@ -16,11 +16,12 @@
 		<div class="input_box">		
 		<input type="password" name="passwd" /></div>
 		<div class="login_button">
+		<a href='/user/frame.php?c=public&a=registerForm' >
+		<input  type="text" value="   注册" />
+		</a>
 		<input type="submit" value="登 录" />
-		</div>
 		</form>
 	</div>
-	<div id="login_bottom"></div>
 </div>
 </body>
 
