admin.login.html add user.login

--- a/admin/view/default/login.html
+++ b/admin/view/default/login.html
@@ -16,6 +16,9 @@
 		<div class="input_box">		
 		<input type="password" name="passwd" /></div>
 		<div class="login_button">
+		<a href='/user/?c=session&a=loginForm'>
+		<input type="text" value=" 用户登陆" />
+		</a>
 		<input type="submit" value="登 录" />
 		</div>
 		</form>
