--- a/admin/view/default/login.html
+++ b/admin/view/default/login.html
@@ -17,7 +17,7 @@
 		<input type="password" name="passwd" /></div>
 		<div class="login_button">
 		<a href='/user/?c=session&a=loginForm'>
-		<input type="text" value=" 用户登陆" />
+		<font color='red' size='4'>-->用户登陆</font>
 		</a>
 		<input type="submit" value="登 录" />
 		</div>
