--- a/user/view/default/session/login.html
+++ b/user/view/default/session/login.html
@@ -17,7 +17,7 @@
 		<input type="password" name="passwd" /></div>
 		<div class="login_button">
 		<a href='/user/frame.php?c=public&a=registerForm' >
-		<input  type="text" value="   注册" />
+		 <font size='4' color='red'>-->用户注册</font>
 		</a>
 		<input type="submit" value="登 录" />
 		</form>
