--- a/user/view/default/frame/index.html
+++ b/user/view/default/frame/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
 <title>会员中心</title>
-<link href="css/style.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css"></link>
 </head>
 <frameset name="right" rows="64,9,*" cols="*" frameborder="no" border="0" framespacing="0">
 	<frame src="?c=frame&a=top" name="top" noresize="noresize" scrolling="no">
