--- a/admin/view/default/install/step1.html
+++ b/admin/view/default/install/step1.html
@@ -5,48 +5,78 @@ function check_db()
 	var url = '?c=install&a=checkdb&db_host=' + form1.db_host + '&db_name=' + form1.db_name + '&db_user=' + form1.db_user + '&db_passwd=' ;
 	window.open(url,'','height=100,width=250,resize=no,scrollbars=no,toolsbar=no,top=200,left=200');
 }
+function pop_dzinput(status)
+{
+	var str="";
+	if(status==1){
+		 str=' <td class="td_bgc right_2">dz应用名：</td>';
+		 str+='<td class="td_bgc right_2"><input name="uc" type="text" id="tb_wid3" value="Discuz! Board" /></td>';
+		 document.getElementById('input_dz').innerHTML=str;
+	}
+	if(status==0){
+		 document.getElementById('input_dz').innerHTML=str;
+	}
+}
 </script>
+<!--  <script language='javascript' src="{{$STATIC}}/scripts/install.js"></script>-->
+
 <div id="header"></div>
-<div align="center">
-{{if $msg}}
+<div align="center">{{if $msg}}
 <div class="block tb_wid mar_top" align="center"><font color=red>{{$msg}}</font></div>
 {{/if}}
 <div class="tb_wid head_block" align="center">&nbsp;欢迎安装kangle虚拟主机管理系统!</div>
 <div class="block tb_wid">
-  <table id="table_2" cellpadding="0" cellspacing="1">
-  <form id="form1" name="form1" method="post" action="?c=install&a=step2">
-    <tr>
-      <td class="td_bgc right_2">数据库地址</td>
-      <td class="td_bgc right_2"><input name="db_host" type="text" id="tb_wid3" value="{{$request.db_host}}" /></td>
-    </tr>
-    <tr>
-      <td class="td_bgc right_2">数据库名</td>
-      <td class="td_bgc right_2"><input name="db_name" type="text" id="tb_wid3" value="{{$request.db_name}}" /></td>
-    </tr>
-    <tr>
-      <td class="td_bgc right_2">数据库用户名</td>
-      <td class="td_bgc right_2"><input name="db_user" type="text" id="tb_wid3" value="{{$request.db_user}}" /></td>
-    </tr>
-    <tr>
-      <td class="td_bgc right_2">数据库密码</td>
-      <td class="td_bgc right_2"><input name="db_passwd" type="password" id="tb_wid3" autocomplete='off'/></td>
-    </tr>
-    <tr>
-      <td class="td_bgc right_2">域名</td>
-      <td class="td_bgc right_2"><input name="domain" type="text" id="tb_wid3" value="{{$request.domain}}"/></td>
-    </tr>
-    <tr>
-      <td class="td_bgc right_2">初始管理员</td>
-      <td class="td_bgc right_2"><input name="admin_user" type="text" id="tb_wid3" value="{{$request.admin_user}}"/></td>
-    </tr>
-    <tr>
-      <td class="td_bgc right_2">初始管理员密码</td>
-      <td class="td_bgc right_2"><input name="admin_passwd" type="password" id="tb_wid3" autocomplete='off'/></td>
-    </tr>
-    <tr>
-      <td colspan="2" class="td_bgc right_2 tb_hg" align="center"><input type="submit" name="Submit" value="下一步" /></td>
-    </tr>
+<table id="table_2" cellpadding="0" cellspacing="1">
+	<form id="form1" name="form1" method="post" action="?c=install&a=step2">
+	<tr>
+		<td class="td_bgc right_2">数据库地址</td>
+		<td class="td_bgc right_2"><input name="db_host" type="text"
+			id="tb_wid3" value="{{$request.db_host}}" /></td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">数据库名</td>
+		<td class="td_bgc right_2"><input name="db_name" type="text"
+			id="tb_wid3" value="{{$request.db_name}}" /></td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">数据库用户名</td>
+		<td class="td_bgc right_2"><input name="db_user" type="text"
+			id="tb_wid3" value="{{$request.db_user}}" /></td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">数据库密码</td>
+		<td class="td_bgc right_2"><input name="db_passwd"
+			type="password" id="tb_wid3" autocomplete='off' /></td>
+	</tr>
+
+	<tr>
+		<td class="td_bgc right_2">开启uc应用：</td>
+		<td class="td_bgc right_2">
+			<input type="radio" name="uc" value="on" onclick="pop_dzinput(1)" />是 
+			<input type="radio" name="uc" value="off"  onclick="pop_dzinput(0)" checked="checked" />否
+	</tr>
+	<tr id="input_dz"></tr>
+
+	<tr>
+		<td class="td_bgc right_2">域名</td>
+		<td class="td_bgc right_2"><input name="domain" type="text"
+			id="tb_wid3" value="{{$request.domain}}" /></td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">初始管理员</td>
+		<td class="td_bgc right_2"><input name="admin_user" type="text"
+			id="tb_wid3" value="{{$request.admin_user}}" /></td>
+	</tr>
+	<tr>
+		<td class="td_bgc right_2">初始管理员密码</td>
+		<td class="td_bgc right_2"><input name="admin_passwd"
+			type="password" id="tb_wid3" autocomplete='off' /></td>
+	</tr>
+	<tr>
+		<td colspan="2" class="td_bgc right_2 tb_hg" align="center"><input
+			type="submit" name="Submit" value="下一步" /></td>
+	</tr>
 	</form>
-  </table>
+</table>
 </div>
 {{include file='common/foot.html'}}
